--- a/charity/charity_management_system/report/school_project/school_project.json
+++ b/charity/charity_management_system/report/school_project/school_project.json
@@ -7,8 +7,8 @@
  "doctype": "Report", 
  "idx": 0, 
  "is_standard": "Yes", 
- "json": "{\"add_total_row\": 0, \"sort_by\": \"Client.modified\", \"add_totals_row\": 0, \"sort_order\": \"desc\", \"sort_by_next\": null, \"filters\": [[\"Family Members\", \"age\", \"<=\", 19]], \"sort_order_next\": \"desc\", \"columns\": [[\"name\", \"Client\"], [\"full_name\", \"Client\"], [\"national_id\", \"Client\"], [\"full_name1\", \"Family Members\"], [\"national_id1\", \"Family Members\"], [\"age\", \"Family Members\"], [\"education_level1\", \"Family Members\"], [\"notes\", \"Family Members\"]]}", 
- "modified": "2017-10-08 16:22:56.430625", 
+ "json": "{\"add_total_row\": 0, \"sort_by\": \"Client.modified\", \"add_totals_row\": 0, \"sort_order\": \"desc\", \"sort_by_next\": null, \"filters\": [[\"Family Members\", \"age\", \"<=\", 19]], \"sort_order_next\": \"desc\", \"columns\": [[\"name\", \"Client\"], [\"full_name\", \"Client\"], [\"national_id\", \"Client\"], [\"full_name1\", \"Family Members\"], [\"national_id1\", \"Family Members\"], [\"age\", \"Family Members\"], [\"education_level1\", \"Family Members\"], [\"semester_grade_percentage\", \"Family Members\"], [\"evaluation\", \"Family Members\"], [\"date_of_grade\", \"Family Members\"], [\"notes\", \"Family Members\"]]}", 
+ "modified": "2018-01-30 14:14:14.817313", 
  "modified_by": "Administrator", 
  "module": "charity management system", 
  "name": "School Project", 
