school winter report 25/3

--- a/charity/charity_management_system/report/school_project/school_project.json
+++ b/charity/charity_management_system/report/school_project/school_project.json
@@ -7,8 +7,8 @@
  "doctype": "Report", 
  "idx": 0, 
  "is_standard": "Yes", 
- "json": "{\"add_total_row\": 0, \"sort_by\": \"Client.modified\", \"add_totals_row\": 0, \"sort_order\": \"desc\", \"sort_by_next\": null, \"filters\": [[\"Family Members\", \"age\", \">\", 6], [\"Family Members\", \"certificate1\", \"=\", 1]], \"sort_order_next\": \"desc\", \"columns\": [[\"name\", \"Client\"], [\"full_name\", \"Client\"], [\"national_id\", \"Client\"], [\"full_name1\", \"Family Members\"], [\"national_id1\", \"Family Members\"], [\"age\", \"Family Members\"], [\"education_level1\", \"Family Members\"], [\"semester_grade_percentage1\", \"Family Members\"], [\"evaluation1\", \"Family Members\"], [\"date_of_grade1\", \"Family Members\"], [\"certificate1\", \"Family Members\"], [\"notes\", \"Family Members\"]]}", 
- "modified": "2018-02-08 13:21:48.181109", 
+ "json": "{\"add_total_row\": 0, \"sort_by\": \"Client.modified\", \"add_totals_row\": 0, \"sort_order\": \"desc\", \"sort_by_next\": null, \"filters\": [[\"Family Members\", \"age\", \">\", 6], [\"Family Members\", \"certificate1\", \"=\", 1]], \"sort_order_next\": \"desc\", \"columns\": [[\"name\", \"Client\"], [\"full_name\", \"Client\"], [\"national_id\", \"Client\"], [\"full_name1\", \"Family Members\"], [\"national_id1\", \"Family Members\"], [\"age\", \"Family Members\"], [\"education_level1\", \"Family Members\"], [\"semester_grade_percentage1\", \"Family Members\"], [\"evaluation1\", \"Family Members\"], [\"date_of_grade1\", \"Family Members\"], [\"certificate1\", \"Family Members\"], [\"gender1\", \"Family Members\"], [\"grade1\", \"Family Members\"], [\"clothing1\", \"Family Members\"]]}", 
+ "modified": "2018-03-25 15:50:25.368616", 
  "modified_by": "Administrator", 
  "module": "charity management system", 
  "name": "School Project", 
