--- a/charity/charity_management_system/report/school_project/school_project.json
+++ b/charity/charity_management_system/report/school_project/school_project.json
@@ -1,36 +1,24 @@
 {
  "add_total_row": 0, 
- "apply_user_permissions": 1, 
  "creation": "2017-10-08 16:22:10.051303", 
  "disabled": 0, 
  "docstatus": 0, 
  "doctype": "Report", 
  "idx": 0, 
  "is_standard": "Yes", 
- "json": "{\"add_total_row\": 0, \"sort_by\": \"Client.modified\", \"add_totals_row\": 0, \"sort_order\": \"desc\", \"sort_by_next\": null, \"filters\": [[\"Family Members\", \"age\", \">\", 6], [\"Family Members\", \"certificate1\", \"=\", 1]], \"sort_order_next\": \"desc\", \"columns\": [[\"name\", \"Client\"], [\"full_name\", \"Client\"], [\"national_id\", \"Client\"], [\"full_name1\", \"Family Members\"], [\"national_id1\", \"Family Members\"], [\"age\", \"Family Members\"], [\"education_level1\", \"Family Members\"], [\"semester_grade_percentage1\", \"Family Members\"], [\"evaluation1\", \"Family Members\"], [\"date_of_grade1\", \"Family Members\"], [\"certificate1\", \"Family Members\"], [\"gender1\", \"Family Members\"], [\"grade1\", \"Family Members\"], [\"clothing1\", \"Family Members\"]]}", 
- "modified": "2018-03-25 15:50:25.368616", 
+ "json": "{\"fields\": [[\"name\", \"Client\"], [\"docstatus\", \"Client\"], [\"full_name\", \"Client\"], [\"image\", \"Client\"], [\"city\", \"Client\"], [\"national_id\", \"Client\"]], \"add_totals_row\": 0, \"order_by\": \"`tabClient`.`modified` desc\", \"add_total_row\": 0, \"filters\": [[\"Family Members\", \"age\", \">=\", 4, false], [\"Family Members\", \"certificate1\", \"=\", 1, false]]}", 
+ "modified": "2018-12-31 14:21:08.823183", 
  "modified_by": "Administrator", 
  "module": "charity management system", 
  "name": "School Project", 
  "owner": "Administrator", 
+ "prepared_report": 0, 
  "ref_doctype": "Client", 
  "report_name": "School Project", 
  "report_type": "Report Builder", 
  "roles": [
   {
    "role": "System Manager"
-  }, 
-  {
-   "role": "Client Relations"
-  }, 
-  {
-   "role": "Research Committee"
-  }, 
-  {
-   "role": "Reception"
-  }, 
-  {
-   "role": "Researcher"
   }
  ]
 }
